--- a/config/zones/AU-TAS-FI.yaml
+++ b/config/zones/AU-TAS-FI.yaml
@@ -147,12 +147,16 @@ isLowCarbon:
       value: 0.6274
     - datetime: '2021-01-01'
       value: 0.647
+    - datetime: '2022-01-01'
+      value: 0.5717
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.6274
     - datetime: '2021-01-01'
       value: 0.647
+    - datetime: '2022-01-01'
+      value: 0.5717
 parsers:
   production: ajenti.fetch_production
 region: Oceania
