--- a/config/zones/AU-TAS-KI.yaml
+++ b/config/zones/AU-TAS-KI.yaml
@@ -163,12 +163,16 @@ isLowCarbon:
       value: 0.6608
     - datetime: '2021-01-01'
       value: 0.5657
+    - datetime: '2022-01-01'
+      value: 0.449
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.6608
     - datetime: '2021-01-01'
       value: 0.5657
+    - datetime: '2022-01-01'
+      value: 0.449
 parsers:
   production: ajenti.fetch_production
 region: Oceania
