--- a/config/zones/CZ.yaml
+++ b/config/zones/CZ.yaml
@@ -454,12 +454,16 @@ isLowCarbon:
       value: 0.5331
     - datetime: '2021-01-01'
       value: 0.4839
+    - datetime: '2022-01-01'
+      value: 0.4938
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1529
     - datetime: '2021-01-01'
       value: 0.1677
+    - datetime: '2022-01-01'
+      value: 0.1418
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
