--- a/config/zones/ES.yaml
+++ b/config/zones/ES.yaml
@@ -561,12 +561,16 @@ isLowCarbon:
       value: 0.7189
     - datetime: '2021-01-01'
       value: 0.7475
+    - datetime: '2022-01-01'
+      value: 0.6783
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4654
     - datetime: '2021-01-01'
       value: 0.5063
+    - datetime: '2022-01-01'
+      value: 0.4599
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
