--- a/config/zones/GR.yaml
+++ b/config/zones/GR.yaml
@@ -474,11 +474,15 @@ isLowCarbon:
       value: 0.2412
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2131
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2022-01-01'
       value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
