--- a/config/zones/HR.yaml
+++ b/config/zones/HR.yaml
@@ -478,12 +478,16 @@ isLowCarbon:
       value: 0.6153
     - datetime: '2021-01-01'
       value: 0.6112
+    - datetime: '2022-01-01'
+      value: 0.5606
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4602
     - datetime: '2021-01-01'
       value: 0.4909
+    - datetime: '2022-01-01'
+      value: 0.4224
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
