--- a/config/zones/IT-SIC.yaml
+++ b/config/zones/IT-SIC.yaml
@@ -413,12 +413,16 @@ isLowCarbon:
       value: 0.3866
     - datetime: '2021-01-01'
       value: 0.4399
+    - datetime: '2022-01-01'
+      value: 0.3699
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.3866
     - datetime: '2021-01-01'
       value: 0.4398
+    - datetime: '2022-01-01'
+      value: 0.3698
 parsers:
   consumptionForecast: ENTSOE.fetch_consumption_forecast
   generationForecast: ENTSOE.fetch_generation_forecast
