--- a/config/zones/NO.yaml
+++ b/config/zones/NO.yaml
@@ -249,11 +249,15 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2022-01-01'
       value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
