--- a/config/zones/US-TEN-TVA.yaml
+++ b/config/zones/US-TEN-TVA.yaml
@@ -638,12 +638,16 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 0.5012
+    - datetime: '2022-01-01'
+      value: 0.4541
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
       value: 0.0288
+    - datetime: '2022-01-01'
+      value: 0.0267
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
