--- a/config/zones/AU-QLD.yaml
+++ b/config/zones/AU-QLD.yaml
@@ -336,20 +336,28 @@ isLowCarbon:
   battery discharge:
     - datetime: '2021-01-01'
       value: 0.2759
+    - datetime: '2022-01-01'
+      value: 0.2276
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1962
     - datetime: '2021-01-01'
       value: 0.2673
+    - datetime: '2022-01-01'
+      value: 0.3105
 isRenewable:
   battery discharge:
     - datetime: '2021-01-01'
       value: 0.2759
+    - datetime: '2022-01-01'
+      value: 0.2276
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1962
     - datetime: '2021-01-01'
       value: 0.2673
+    - datetime: '2022-01-01'
+      value: 0.3105
 parsers:
   consumptionForecast: AEMO.fetch_consumption_forecast
   price: OPENNEM.fetch_price
