--- a/config/zones/AU.yaml
+++ b/config/zones/AU.yaml
@@ -266,22 +266,30 @@ isLowCarbon:
       value: 0.2325
     - datetime: '2021-01-01'
       value: 0.2942
+    - datetime: '2022-01-01'
+      value: 0.3488
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2626
     - datetime: '2021-01-01'
       value: 0.3367
+    - datetime: '2022-01-01'
+      value: 0.4042
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.2325
     - datetime: '2021-01-01'
       value: 0.2942
+    - datetime: '2022-01-01'
+      value: 0.3488
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2626
     - datetime: '2021-01-01'
       value: 0.3367
+    - datetime: '2022-01-01'
+      value: 0.4042
 region: Oceania
 sources:
   IPCC 2014:
