--- a/config/zones/BE.yaml
+++ b/config/zones/BE.yaml
@@ -541,12 +541,16 @@ isLowCarbon:
       value: 0.6614
     - datetime: '2021-01-01'
       value: 0.7364
+    - datetime: '2022-01-01'
+      value: 0.7178
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.2656
     - datetime: '2021-01-01'
       value: 0.2415
+    - datetime: '2022-01-01'
+      value: 0.2916
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
