--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -151,10 +151,14 @@ isLowCarbon:
       value: 0.0
     - datetime: '2021-01-01'
       value: 0.0
+    - datetime: '2022-01-01'
+      value: 0.0
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2022-01-01'
       value: 1.0
 isRenewable:
   battery discharge:
@@ -162,10 +166,14 @@ isRenewable:
       value: 0.0
     - datetime: '2021-01-01'
       value: 0.0
+    - datetime: '2022-01-01'
+      value: 0.0
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2022-01-01'
       value: 1.0
 parsers:
   consumption: ES.fetch_consumption
