--- a/config/zones/ES-CN-HI.yaml
+++ b/config/zones/ES-CN-HI.yaml
@@ -287,12 +287,16 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 0.7471
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 0.7471
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
