--- a/config/zones/ES-CN-LZ.yaml
+++ b/config/zones/ES-CN-LZ.yaml
@@ -178,11 +178,15 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
+      value: 1.0
+    - datetime: '2022-01-01'
       value: 1.0
 parsers:
   consumption: ES.fetch_consumption
