--- a/config/zones/ES-ML.yaml
+++ b/config/zones/ES-ML.yaml
@@ -137,12 +137,16 @@ isLowCarbon:
       value: 0.0747
     - datetime: '2021-01-01'
       value: 0.0602
+    - datetime: '2022-01-01'
+      value: 0.0759
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.0747
     - datetime: '2021-01-01'
       value: 0.0602
+    - datetime: '2022-01-01'
+      value: 0.0759
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
