--- a/config/zones/GB.yaml
+++ b/config/zones/GB.yaml
@@ -423,12 +423,16 @@ isLowCarbon:
       value: 0.6139
     - datetime: '2021-01-01'
       value: 0.5777
+    - datetime: '2022-01-01'
+      value: 0.5787
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4101
     - datetime: '2021-01-01'
       value: 0.3753
+    - datetime: '2022-01-01'
+      value: 0.4125
 parsers:
   consumption: ELEXON.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
