--- a/config/zones/GP.yaml
+++ b/config/zones/GP.yaml
@@ -152,8 +152,16 @@ fallbackZoneMixes:
         solar: 0.06917119460371109
         unknown: 0.0
         wind: 0.04311598615929433
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.1722
+isRenewable:
+  battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.1722
 parsers:
   price: FR_O.fetch_price
   production: FR_O.fetch_production
