--- a/config/zones/IT-NO.yaml
+++ b/config/zones/IT-NO.yaml
@@ -433,12 +433,16 @@ isLowCarbon:
       value: 0.5047
     - datetime: '2021-01-01'
       value: 0.4674
+    - datetime: '2022-01-01'
+      value: 0.4349
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.3907
     - datetime: '2021-01-01'
       value: 0.3438
+    - datetime: '2022-01-01'
+      value: 0.3133
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
