--- a/config/zones/KR.yaml
+++ b/config/zones/KR.yaml
@@ -400,6 +400,8 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2021-01-01'
       value: 0.3322
+    - datetime: '2022-01-01'
+      value: 0.338
   unknown:
     _comment: 'Source: 2020 annual electricity production by IEA'
     _url: https://www.iea.org/fuels-and-technologies/electricity
@@ -410,6 +412,8 @@ isRenewable:
   hydro discharge:
     - datetime: '2021-01-01'
       value: 0.0015
+    - datetime: '2022-01-01'
+      value: 0.0143
   unknown:
     _comment: 'Source: 2020 annual electricity production by IEA'
     _url: https://www.iea.org/fuels-and-technologies/electricity
