--- a/config/zones/LT.yaml
+++ b/config/zones/LT.yaml
@@ -488,12 +488,16 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 0.566
+    - datetime: '2022-01-01'
+      value: 0.6857
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
       value: 0.4169
+    - datetime: '2022-01-01'
+      value: 0.5275
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
