--- a/config/zones/NZ.yaml
+++ b/config/zones/NZ.yaml
@@ -312,12 +312,16 @@ isLowCarbon:
       value: 0.7847
     - datetime: '2021-01-01'
       value: 0.842
+    - datetime: '2022-01-01'
+      value: 0.8265
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.7847
     - datetime: '2021-01-01'
       value: 0.842
+    - datetime: '2022-01-01'
+      value: 0.8265
 parsers:
   price: NZ.fetch_price
   production: NZ.fetch_production
