--- a/config/zones/PH-MI.yaml
+++ b/config/zones/PH-MI.yaml
@@ -207,11 +207,15 @@ isLowCarbon:
       value: 0.3512
     - datetime: '2021-01-01'
       value: 0.3392
+    - datetime: '2022-01-01'
+      value: 0.3392
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.3512
     - datetime: '2021-01-01'
+      value: 0.3392
+    - datetime: '2022-01-01'
       value: 0.3392
 parsers:
   production: IEMOP.fetch_production
