--- a/config/zones/PH.yaml
+++ b/config/zones/PH.yaml
@@ -253,10 +253,14 @@ isLowCarbon:
       value: 0.1854
     - datetime: '2021-01-01'
       value: 0.1818
+    - datetime: '2022-01-01'
+      value: 0.1818
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1695
     - datetime: '2021-01-01'
+      value: 0.1654
+    - datetime: '2022-01-01'
       value: 0.1654
 isRenewable:
   battery discharge:
@@ -264,10 +268,14 @@ isRenewable:
       value: 0.1854
     - datetime: '2021-01-01'
       value: 0.1818
+    - datetime: '2022-01-01'
+      value: 0.1818
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1695
     - datetime: '2021-01-01'
+      value: 0.1654
+    - datetime: '2022-01-01'
       value: 0.1654
 region: Asia
 sources:
