--- a/config/zones/RS.yaml
+++ b/config/zones/RS.yaml
@@ -350,12 +350,16 @@ isLowCarbon:
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 0.2838
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
     - datetime: '2021-01-01'
       value: 1.0
+    - datetime: '2022-01-01'
+      value: 0.2144
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
