--- a/config/zones/SK.yaml
+++ b/config/zones/SK.yaml
@@ -442,12 +442,16 @@ isLowCarbon:
       value: 0.6602
     - datetime: '2021-01-01'
       value: 0.6272
+    - datetime: '2022-01-01'
+      value: 0.6498
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1875
     - datetime: '2021-01-01'
       value: 0.168
+    - datetime: '2022-01-01'
+      value: 0.1736
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
