--- a/config/zones/US-CAL-LDWP.yaml
+++ b/config/zones/US-CAL-LDWP.yaml
@@ -589,17 +589,27 @@ fallbackZoneMixes:
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
+  battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.2687
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.3464
     - datetime: '2021-01-01'
       value: 0.4423
+    - datetime: '2022-01-01'
+      value: 1.0
 isRenewable:
+  battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.1886
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.325
     - datetime: '2021-01-01'
       value: 0.3961
+    - datetime: '2022-01-01'
+      value: 1.0
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
