--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -627,12 +627,16 @@ isLowCarbon:
       value: 0.5802
     - datetime: '2021-01-01'
       value: 0.7716
+    - datetime: '2022-01-01'
+      value: 0.6096
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.0712
     - datetime: '2021-01-01'
       value: 0.2827
+    - datetime: '2022-01-01'
+      value: 0.1374
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
