--- a/config/zones/US-CAR-DUK.yaml
+++ b/config/zones/US-CAR-DUK.yaml
@@ -424,7 +424,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
-        value: 299.81
+        value: 299.82
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
@@ -528,7 +528,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; IPCC 2014
-        value: 323.81
+        value: 323.82
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; IPCC 2014
@@ -717,12 +717,16 @@ isLowCarbon:
       value: 0.6319
     - datetime: '2021-01-01'
       value: 0.6033
+    - datetime: '2022-01-01'
+      value: 0.59
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.0274
     - datetime: '2021-01-01'
       value: 0.0227
+    - datetime: '2022-01-01'
+      value: 0.0296
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
