--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -543,12 +543,16 @@ isLowCarbon:
       value: 0.4802
     - datetime: '2021-01-01'
       value: 0.5684
+    - datetime: '2022-01-01'
+      value: 0.5921
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.035
     - datetime: '2021-01-01'
       value: 0.0334
+    - datetime: '2022-01-01'
+      value: 0.0443
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
