--- a/config/zones/US.yaml
+++ b/config/zones/US.yaml
@@ -467,22 +467,30 @@ isLowCarbon:
       value: 0.4048
     - datetime: '2021-01-01'
       value: 0.3947
+    - datetime: '2022-01-01'
+      value: 0.4081
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4173
     - datetime: '2021-01-01'
       value: 0.406
+    - datetime: '2022-01-01'
+      value: 0.4175
 isRenewable:
   battery discharge:
     - datetime: '2020-01-01'
       value: 0.1972
     - datetime: '2021-01-01'
       value: 0.2006
+    - datetime: '2022-01-01'
+      value: 0.2195
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.1971
     - datetime: '2021-01-01'
       value: 0.2012
+    - datetime: '2022-01-01'
+      value: 0.2166
 parsers:
   productionCapacity: EMBER.fetch_production_capacity
 region: Americas
